--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,5 +25,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: ./docker/.
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cleantest:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/net6contarz:latest
